erDiagram
	GRAPH_NODE ||--o{ GRAPH_EDGE : "source of"
	GRAPH_NODE ||--o{ GRAPH_EDGE : "target of"
	GRAPH_NODE ||--o{ GRAPH_METADATA : "has"
	GRAPH_EDGE ||--o{ GRAPH_METADATA : "has"

	GRAPH_NODE {
		string id
		string namespaceId
		string label
		string type
		string status
		string createdBy
		date createdAt
		date activatedAt
		date archivedAt
	}

	GRAPH_EDGE {
		string id
		string sourceNodeId
		string targetNodeId
		string type
		string status
		float weight
		string label
		string createdBy
		date createdAt
		date activatedAt
		date removedAt
	}

	GRAPH_METADATA {
		string id
		string entityId
		string entityType
		string key
		string value
		date updatedAt
	}
